--- a/resolver-tags.mdx
+++ b/resolver-tags.mdx
@@ -15,6 +15,8 @@ whether you want to use a sandbox environment for a vendor,
 or to bypass the vendor and return constant values in a
 `staging` environment.
 
+---
+
 ## Specifying tags
 
 Tags can be either a string value, or a key-value pair.
@@ -30,11 +32,12 @@ As a single scalar string.
 - **<code className="before:content-none after:content-none">"key:value"</code>** -
 As a string value representing a key-value pair.
 
+### Python resolver tags
+
 Resolvers take one or many tags, all of which need to match for the
 resolver to run. For example, you may want to test with
 a sandboxed vendor, and also be able to set a constant value
-for a particular feature. For instructions on how to set tags on SQL file resolvers,
-see the SQL file resolvers [docs](/docs/sql#proper-comment-formatting)
+for a particular feature.
 
 ```py
 @online(tags=["**api:mock**", "**fraud**"])
@@ -76,6 +79,31 @@ chosen for a given set of tags.
 Note that these resolvers don't need to take the same set of inputs,
 and don't need to return the same types.
 
+### SQL resolver tags
+
+SQL resolvers can also specify flags via the `tags` comment.
+For example, if you wanted to use Snowflake for `User` features
+in a fraud context and use Redshift for the same features in a signup
+context, you could write two different SQL file resolvers with different tags:
+
+```src/resolvers/users.chalk.sql
+-- type: offline
+-- resolves: User
+-- source: snowflake
+-- tags: ["fraud"]
+select id, name, fraud_status from users
+```
+
+```src/resolvers/users_signup.chalk.sql
+-- type: offline
+-- resolves: User
+-- source: redshift
+-- tags: ["signup"]
+select id, name, fraud_status from users
+```
+
+---
+
 ## When tagged resolvers run
 
 Like [Environments](/docs/resolver-environments), tags control when resolvers run
@@ -87,7 +115,7 @@ that can take one of three types:
 
 - **Unassigned (default)** - The resolver will be a candidate to run for _every_ set of tags.
 - **String value** - The resolver will run _only_ if this tag is provided.
-- **List of strings** - The resolver will run _only_ if _all_ of the specified tags match.
+- **List of strings** - The resolver will run _only_ if _all_ the specified tags match.
 
 If your resolver is tagged only by a key (not a key-value pair),
 and the request context contains a key-value pair such that the resolver's
@@ -102,6 +130,9 @@ the resolver will be eligible to run. For example:
 | <span className="font-mono text-accent-teal"> [api:live, mock-phone] </span> | <span className="font-mono text-pink-500"> api:live </span>               | No       |
 | <span className="font-mono text-accent-teal"> api:live </span>               | <span className="font-mono text-pink-500"> api </span>                    | No       |
 | <span className="font-mono text-accent-teal"> api:fixture </span>            | <span className="font-mono text-pink-500"> api:live </span>               | No       |
+
+
+---
 
 ## Example
 
