--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -758,6 +758,25 @@ logging.sinks.update
 logging.views.access
 logging.views.get
 logging.views.list
+memorystore.backupCollections.get
+memorystore.backupCollections.list
+memorystore.backups.delete 
+memorystore.backups.export
+memorystore.backups.get
+memorystore.backups.list 
+memorystore.instances.backup
+memorystore.instances.connect 
+memorystore.instances.create
+memorystore.instances.delete
+memorystore.instances.get
+memorystore.instances.list 
+memorystore.instances.update
+memorystore.locations.get
+memorystore.locations.list 
+memorystore.operations.cancel
+memorystore.operations.delete
+memorystore.operations.get
+memorystore.operations.list 
 monitoring.alertPolicies.create
 monitoring.alertPolicies.delete
 monitoring.alertPolicies.get
@@ -824,6 +843,7 @@ redis.instances.upgrade
 redis.operations.get
 redis.operations.list
 resourcemanager.projects.get
+resourcemanager.projects.list
 resourcemanager.projects.getIamPolicy
 resourcemanager.projects.setIamPolicy
 run.executions.get
