--- a/has-many.mdx
+++ b/has-many.mdx
@@ -219,7 +219,7 @@ The joining feature class lets you:
 
 For example, to get the titles for all the movies that an actor has appeared in, you can run the following query:
 
-```sh
+```bash
 $ chalk query --in actor.id=1 --out actor.appearances.movie.title
 Results
 
