--- a/resolver-tags.mdx
+++ b/resolver-tags.mdx
@@ -86,7 +86,7 @@ For example, if you wanted to use Snowflake for `User` features
 in a fraud context and use Redshift for the same features in a signup
 context, you could write two different SQL file resolvers with different tags:
 
-```src/resolvers/users.chalk.sql
+```sql src/resolvers/users.chalk.sql
 -- type: offline
 -- resolves: User
 -- source: snowflake
@@ -94,7 +94,7 @@ context, you could write two different SQL file resolvers with different tags:
 select id, name, fraud_status from users
 ```
 
-```src/resolvers/users_signup.chalk.sql
+```sql src/resolvers/users_signup.chalk.sql
 -- type: offline
 -- resolves: User
 -- source: redshift
