docs: update aws permissions

--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -161,6 +161,18 @@ infrastructure in your cloud account:
                 "dynamodb:*",
                 "dax:*",
                 "application-autoscaling:*"
+                "elasticache:CreateCacheSubnetGroup",
+                "elasticache:DeleteCacheSubnetGroup",
+                "elasticache:DescribeCacheSubnetGroups",
+                "elasticache:ModifyCacheSubnetGroup",
+                "elasticache:CreateReplicationGroup",
+                "elasticache:DeleteReplicationGroup",
+                "elasticache:DescribeReplicationGroups",
+                "elasticache:ModifyReplicationGroup",
+                "elasticache:DescribeCacheClusters",
+                "elasticache:AddTagsToResource",
+                "elasticache:RemoveTagsFromResource",
+                "elasticache:ListTagsForResource"
             ],
             "Effect": "Allow"
         }
