Document python 3.12 support

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -59,6 +59,8 @@ We've introduced an Inputs Explorer that makes it easier to see the inputs of th
 
 ![Inputs explorer for offline queries](/img/changelog-input_explorer_for_offline_queries.png)
 
+---
+
 ## June 6, 2025
 
 ### New documentation on optimizing and verifying static Python resolvers
@@ -109,6 +111,8 @@ The new tab shows:
 
 ![All charts page](/img/changelog-2025_06_06-all_charts.png)
 
+---
+
 ## May 30, 2025
 
 ### Export user permissions as a CSV
@@ -124,6 +128,8 @@ This export, available from the User Permissions section in your Chalk Dashboard
 When selected, services will be directed to the specified node pools with automatic toleration handling. This prevents services from being assigned to incompatible node types and ensures pods are scheduled correctly on tainted nodes.
 
 ![Resource configuration](/img/changelog-25_05_30-resource_configuration.png)
+
+---
 
 ## May 23, 2025
 
@@ -239,6 +245,8 @@ We've published our [quarterly product update,](https://chalk.ai/blog/product-up
 
 We've published a recap of the various AI and data conferences our team attended in April 2025.
 The [blog post](https://chalk.ai/blog/events-roundup-april-2025) covers our participation at NexGen Banking Summit, VeloxCon, Agents & GenAI Infrastructure Summit, OptimizedAI Conference, and Data Council, including key talks and insights we shared about building infra for real-time ML at scale.
+
+---
 
 ## April 21, 2025
 
@@ -1781,9 +1789,9 @@ You can now use either of Python 3.11 or 3.10 on a per-environment basis.
 project: my-project-id
 environments:
   default:
-    runtime: 3.10
+    runtime: python310
   develop:
-    runtime: 3.11
+    runtime: python311
 ```
 
 See [Python Version](/docs/docker#python-version) for more information.
