--- a/configuration.mdx
+++ b/configuration.mdx
@@ -66,6 +66,7 @@ Here's an example of how to do this cleanly:
 ```python src/models/profile.py
 # Imports `User` directly, because `src/models/user.py`
 # doesn't import `src/models/profile.py`
+from chalk.features import features
 from src.models.user import User
 
 @features
@@ -180,7 +181,7 @@ features and resolvers.
       your dashboard. Use <code>default</code> to configure default values to apply to all of this project's
       environments.
       <SubAttributeTable title=''>
-        <SubAttribute field='runtime' kind='"python310" | "python311"'>
+        <SubAttribute field='runtime' kind='"python310" | "python311" | "python312"'>
           The Python version for the Chalk project.
         </SubAttribute>
         <SubAttribute field='requirements' kind='str'>
@@ -252,7 +253,7 @@ project: my-project-id
 
 environments:
   default:
-    runtime: python311
+    runtime: python312
     requirements: requirements.txt
   prod:
     dockerfile: ./DockerfileProd
@@ -293,7 +294,7 @@ project: my-project-id
 
 environments:
   dev:
-    runtime: python311
+    runtime: python312
     requirements: requirements-dev.txt
   prod:
     requirements: pyproject.yaml
@@ -304,7 +305,7 @@ environments:
 ## Pinning Chalk Platform Versions
 
 By default, when you deploy in your Chalk environment, Chalk will pull the latest version of the Chalk platform.
-You can choose to pin a [Chalk platform version](/release-notes)  for each environment such that your deploys 
+You can choose to pin a [Chalk platform version](/release-notes)  for each environment such that your deploys
 will only update your Chalk code, and will use the same platform image until you deploy a new pinned platform 
 version. 
 
@@ -312,15 +313,15 @@ version.
 project: my-project-id 
 environments:
   dev:
-    runtime: python311
+    runtime: python312
     requirements: requirements-dev.txt
     platform_version: v3.24.6
   staging:
-    runtime: python311
+    runtime: python312
     requirements: requirements-staging.txt
     platform_version: v3.24.6
   prod:
-    runtime: python311
+    runtime: python312
     requirements: requirements.txt
     platform_version: v3.24.6
 ```
