--- a/has-one.mdx
+++ b/has-one.mdx
@@ -174,6 +174,7 @@ Here's an example of how to do this cleanly:
 ```python src/models/profile.py
 # Imports `User` directly, because `src/models/user.py`
 # doesn't import `src/models/profile.py`
+from chalk.features import features
 from src.models.user import User
 
 @features
